# woof

./: .gitignore  .travis.yml  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
tests/: conftest.py  test_woof.py
woof/: __init__.py  entry_points.py  woof.py
woof/backends/: base.py  telegram_backend.py
