[metadata]
name = woof
author = Rotem Yaari
author-email = vmalloc@gmail.com
description = A simple utility library for adding flexible notifications to Python scripts
home-page = https://github.com/vmalloc/cob
license = MIT
zip_safe = False
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python

[entry_points]
console_scripts =
    woof  = woof.entry_points:main


[files]
packages =
    woof

[extras]
testing =
    pylint
    pytest